--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
+    "xrpl": "^3.0.0",
     "xumm": "^1.7.7"
   },
   "scripts": {
