--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,5 @@
+XUMMAPI=9e14cd6e-166c-4f70-9f59-f7e5d4d3cf0e
+XUMMSECRET=2fe4438f-d4af-414a-9f0e-4e4c766980f3
 REACT_APP_GOOGLE_SHEET_CREDENTIALS='AIzaSyAPZl-ovHRY_mzR3t-16h0JfXlzaWQ9aN8'
 REACT_APP_SPREADSHEET_ID='1ITlmG44A4GeXN-r9vnENPDtk0PZzRre8OmivTNDP228'
 MY_SECRET='ssUQQomveYktkacumAfoUNHemHeMP'
