--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "xrpl": "^3.0.0",
-    "xumm": "^1.7.7"
+    "xumm": "^1.7.7",
+    "xumm-sdk": "^1.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
